# ApiNest

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08095d69c682_add_apis_and_endpoints.py  b55c5a0d1f87_add_users_and_refresh_tokens.py  c1962c37a4ff_add_organizations_memberships_.py  e7b032eb7b5f_add_request_history.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  apis.py  auth.py  dashboard.py  docs.py  endpoints.py  invitations.py  organizations.py  projects.py  rest_client.py  users.py
backend/app/core/: config.py  constants.py  db.py  db_types.py  deps.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/models/: __init__.py  api_registry.py  base.py  organization.py  project.py  request_history.py  user.py
backend/app/schemas/: api_registry.py  auth.py  dashboard.py  endpoint.py  organization.py  project.py  rest_client.py  user.py
backend/app/services/: api_registry_service.py  auth_service.py  dashboard_service.py  endpoint_service.py  openapi_export_service.py  organization_service.py  project_service.py  rest_client_service.py  user_service.py
backend/tests/: conftest.py  test_api_registry.py  test_auth.py  test_dashboard.py  test_docs.py  test_endpoints.py  test_organizations.py  test_projects.py  test_rest_client.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: app-bootstrap.tsx  main.tsx
(+36 files in other folders)
